Add sorted variant of table formatter

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,11 +1,15 @@
-version=2.3.2
-style = default
+version = 2.5.3
+preset = default
 maxColumn = 120
 
 align.openParenCallSite = false
 align.openParenDefnSite = false
+danglingParentheses.defnSite = false
+danglingParentheses.callSite = true
+danglingParentheses.ctrlSite = false
 
 # don't align arrows in match statements
 align.tokens = []
 
-docstrings = JavaDoc
+assumeStandardLibraryStripMargin = true
+align.stripMargin = true
