--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,15 +1,20 @@
-version = 2.5.3
-preset = default
+version = 2.7.5
+style = default
 maxColumn = 120
 
 align.openParenCallSite = false
 align.openParenDefnSite = false
+danglingParentheses.callSite = false
 danglingParentheses.defnSite = false
-danglingParentheses.callSite = true
-danglingParentheses.ctrlSite = false
 
 # don't align arrows in match statements
-align.tokens = []
+align.preset = none
 
-assumeStandardLibraryStripMargin = true
-align.stripMargin = true
+docstrings.style = Asterisk
+
+fileOverride {
+  # align libraryDependencies in *.sbt
+  "glob:**/*.sbt" {
+    align.preset = most
+  }
+}
