--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [8, 11]
+        java: [8, 11, 17, 21]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: coursier/cache-action@v6
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v4
         with:
           java-version: ${{matrix.java}}
-          distribution: adopt
+          distribution: corretto
       - name: Run tests
         uses: lokkju/github-action-sbt@master
         with:
