--- a/.github/workflows/scalafmt-lint.yml
+++ b/.github/workflows/scalafmt-lint.yml
@@ -13,7 +13,7 @@ jobs:
     name: Scalafmt
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       # only fetch the head commits of our branch & mainline
       # loosely based on https://github.com/actions/checkout/issues/329#issuecomment-717076567
@@ -22,6 +22,6 @@ jobs:
           git remote set-branches origin "${{github.base_ref}}" "${{github.head_ref}}"
           git fetch --depth 1
           git checkout "${{github.head_ref}}"
-      - uses: stringbean/scalafmt-action@v2.0.0-beta
+      - uses: stringbean/scalafmt-action@v3
         with:
-          compare-branch: master
+          compare-branch: main
